Wired SKR and Pi using UART

--- a/ender-3-bigtreetech-skr-v1.3.cfg
+++ b/ender-3-bigtreetech-skr-v1.3.cfg
@@ -66,9 +66,9 @@ heater_pin: P2.7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.24
 control: pid
-pid_Kp: 21.72
-pid_Ki: 1.46
-pid_Kd: 80.90
+pid_Kp: 24.903
+pid_Ki: 1.230
+pid_Kd: 126.071
 min_temp: 0
 max_temp: 240
 pressure_advance: 0.55
@@ -84,9 +84,9 @@ heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.23
 control: pid
-pid_Kp: 54.027
-pid_Ki: 0.770
-pid_Kd: 948.182
+pid_Kp: 72.411
+pid_Ki: 1.204
+pid_Kd: 1088.876
 min_temp: 0
 max_temp: 90
 
@@ -94,7 +94,12 @@ max_temp: 90
 pin: P2.3
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1768_0270000C821C3DAF54A2885CC22000F5-if00
+#USB connection
+#serial: /dev/serial/by-id/usb-Klipper_lpc1768_0270000C821C3DAF54A2885CC22000F5-if00
+#UART using the TFT plug
+serial: /dev/ttyAMA0
+# needed for UAT connection
+restart_method: command
 
 [printer]
 kinematics: cartesian
